# advent-of-code-2024

./: .gitmodules
day15 - Warehouse Woes/: build and run.bat  day15 - problem.txt  day15.hs  run as script.bat
day15 - Warehouse Woes/day15-warehouse-woes/: CHANGELOG.md  README.md  day15-warehouse-woes.cabal  stack.yaml
day15 - Warehouse Woes/day15-warehouse-woes/app/: Main.hs
