cabal-version:       >=1.10
name:                day15-warehouse-woes
version:             0.1.0.0
synopsis:            A library for working with ASCII worlds
description:         A library that provides functions for reading, modifying, and displaying ASCII worlds.
homepage:            https://github.com/githubuser/day15-warehouse-woes#readme
license:             BSD3
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            ASCII
build-type:          Simple

executable day15-warehouse-woes
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:       -O2
  build-depends:
      base,
      ascii-world,
      containers >= 0.6.7,
      ansi-terminal >=0.11.5,
      linear,
      array
  default-language:  Haskell2010
